# biding

./: .gitignore  README.md  pyproject.toml
plan/: 01-architecture.md  02-algorithm.md  03-data-models.md  04-excel-format.md  05-cli-interface.md  06-task-breakdown.md  README.md
requirements/: prd.md
src/biding/: __init__.py  __main__.py  calculator.py  cli.py  excel_writer.py  main.py  models.py  rounding.py
tests/: test_biding.py  test_calculator.py  test_excel_writer.py  test_main.py  test_models.py  test_rounding.py
