[project]
name = "biding"
version = "0.1.0"
description = "Quoting Calculator — finds the fewest-rounds price-reduction sequence"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1,<4",
]

[project.scripts]
biding = "biding.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/biding"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8",
]
