[project]
name = "biding"
version = "0.1.0"
description = "Quoting calculator that finds the fewest-rounds price-reduction sequence from a start price to a target price."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1,<4",
]

[project.scripts]
biding = "biding.main:cli_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/biding"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
